<?xml version="1.0" encoding="UTF-8"?>
<resources>
    <string name="app_name">TapTimingKeyboard</string>
    <string name="getting_data">Getting data...</string>
    <string name="getting_data_retry_button">Retry</string>
    <string name="getting_data_error">Error when getting data, please check your internet connection</string>
    <string name="wordlist_spinner_empty">No word lists</string>
    <string name="choose_list">Select a test list:</string>
    <string name="no_wordlist_selected">No word list selected</string>
    <string name="session_info_active">User: %s, session %d</string>
    <string name="session_info_inactive">User: %s</string>
    <string name="start_session_confirmation_title">Start a session</string>
    <string name="start_session_confirmation_text">Do you really want to start a test session?</string>
    <string name="pref_user_id">Keyboard user</string>
    <string name="pref_longer_dimension">Longer screen dimension (mm)</string>
    <string name="pref_shorter_dimension">Shorter screen dimension (mm)</string>
    <string name="pref_height_landscape">Height in landscape orientation (%)</string>
    <string name="pref_height_portrait">Height in portrait orientation (%)</string>
    <string name="pref_enable_sound">Enable sound</string>
    <string name="pref_sound_volume">Sound volume</string>
    <string name="pref_server_url">Remote data URL</string>
    <string name="test_activity_start">Start</string>
    <string name="user_info_label">Enter the user data</string>
    <string name="description_first_name">First name</string>
    <string name="description_last_name">Last name</string>
    <string name="description_age">Age</string>
    <string name="description_is_diagnosed">Diagnosed with Parkinson\'s disease</string>
    <string name="description_on_medication">Currently on medication</string>
    <string name="label_sex">Sex</string>
    <string name="label_handedness">Dominant hand</string>
    <string name="label_diagnosed_asymmetry">Symptoms asymmetry</string>
    <string name="load_user_existing_info">Previous entries</string>
    <string name="save_user_info">Save</string>
    <string name="sex_male">Male</string>
    <string name="sex_female">Female</string>
    <string name="handedness_left">Left</string>
    <string name="handedness_right">Right</string>
    <string name="asymmetry_left">Left</string>
    <string name="asymmetry_right">Right</string>
    <string name="asymmetry_not_specified">Not specified</string>
    <string name="asymmetry_no_asymmetry">No asymmetry</string>
    <string name="warning_fill_all_fields">Please fill all fields</string>
    <string name="warning_no_existing_users">No existing users</string>
    <string name="pref_vibrations">Vibrations</string>
    <string name="pref_vibration_duration">Vibration duration (ms)</string>
    <string name="preference_word_progress">Word typing progress</string>
    <string name="uncynced_lists_activity_title">Test session results unsent to a server</string>
    <string name="button_sync_results">Send results</string>
    <string name="preference_unsent_results">Unsent test results</string>
    <string name="info_no_unsent_results">No unsent test session results</string>
    <string name="toast_session_results_sent">Results sent to server</string>
    <string name="activity_label_preferences">TapTimingKeyboard Preferences</string>
    <string name="session_end">Test session finished, thank you :)</string>
    <string name="ok_button">OK</string>
    <string name="sending_results_button">Sending results...</string>
    <string name="login_title">TapTimingKeyboard log in</string>
    <string name="login_button_login">Log in</string>
    <string name="login_button_register">Register</string>
    <string name="login_label_no_account">Don\'t have an account?</string>
    <string name="register_button_register" >Register</string>
    <string name="text_password">Password</string>
    <string name="text_confirm_password">Confirm password</string>
    <string name="register_title" >TapTimingKeyboard Registration</string>
    <string name="text_email">E-mail address</string>
    <string name="login_text_failed">Authentication failed.</string>
    <string name="text_passwords_differ">Passwords are different</string>
    <string name="text_registration_failed">Registration has failed</string>
    <string name="text_registration_succeed">Registration succeed, plase log in</string>
    <string name="text_logout">Logout</string>
    <string name="text_wrong_email_addres">E-mail address is wrong</string>
    <string name="text_empty_fields">Any of the fields coudn\'t be empty</string>
</resources>